--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <section class="LastEpisode">
                 <h3>Teaser video</h3>
                 <article>
-                    <video class="aflevering1" src="video's/Teaser.mp4" controls autoplay loop muted></video>
+                    <video class="aflevering1" src="videos/teaser.mp4" controls autoplay loop muted></video>
                     <h4>Our podcast</h4>
                     <p class="p1">Our podcast is a tribute to music in all its forms. A journey through melodies,
                         rhythm, and stories that are so much more than the songs themselves: it's also about the
